--- a/q1.1_q1.3
+++ b/q1.1_q1.3
@@ -1,3 +1,5 @@
+###organize the “Salaries and Wages” into a frequency distribution. 
+
 ##for small narrowbodies 
 # Load necessary library
 library(dplyr)
