--- a/q1.1_q1.3
+++ b/q1.1_q1.3
@@ -1,4 +1,4 @@
-###organize the “Salaries and Wages” into a frequency distribution. 
+###organize the “Salaries and Wages” into a frequency distribution and creating histograms 
 
 ##for small narrowbodies 
 # Load necessary library
