--- a/q1.2
+++ b/q1.2
@@ -1,3 +1,5 @@
+### Calculating Mean, Median, Mode, Standard Deviation, Variance, Quartiles, 9th Decile, 10th Percentile and Range of “Salaries and Wages
+
 ##For small narrow bodies:
 # Original Salaries and Wages data
 salaries_wages <- c(388, 410, 444, 439, 437, 484, 553, 568, 371, 327, 292, 293, 296, 325, 354, 358, 367, 414, 528, 615, 649)
