--- a/q1.5
+++ b/q1.5
@@ -1,3 +1,6 @@
+### Developing a Box plot for the variables “Purchased Goods”, “Aircraft Ownerships” and “Daily Utilization per Aircraft”. 
+
+
 ##For small narrow bodies :
 # Load required libraries
 library(ggplot2)
