--- a/q1.5
+++ b/q1.5
@@ -5,7 +5,8 @@ library(ggplot2)
 library(reshape2)
 library(gridExtra)  # For arranging multiple plots
 
-set.seed(123)  # Set seed for reproducibility
+# Set seed for reproducibility
+set.seed(123)
 
 # Create data frames for each aircraft type
 small_narrow_data <- data.frame(
@@ -13,7 +14,7 @@ small_narrow_data <- data.frame(
   Purchased_Goods = c(563,693,665,572,544,769,796,652,770,981,1384,1633,1681,2726,1357,1858,2335,2583,2410,2297,1538),
   Aircraft_Ownership = c(445,411,387,396,408,444,485,512,399,358,315,366,391,414,435,379,229,295,280,293,291),
   Daily_Utilization = c(9.28,9.40,9.59,9.78,9.95,9.85,9.22,8.96,9.00,9.81,10.36,10.57,10.65,9.96,10.23,10.46,10.39,10.01,10.07,9.65,9.18),
-  Type = "Small Narrow Body"
+  Aircraft_Type = "Small Narrow Body"
 )
 
 large_narrow_data <- data.frame(
@@ -21,7 +22,7 @@ large_narrow_data <- data.frame(
   Purchased_Goods = c(644,784,756,650,631,864,961,873,1021,1354,1897,2200,2236,3644,1844,2478,3124,3166,2951,2775,1836),
   Aircraft_Ownership = c(821,769,737,661,575,581,769,734,590,465,403,385,418,467,516,492,424,329,295,274,217),
   Daily_Utilization = c(11,11,11,11,11,11,10,10,9,10,11,11,11,10,10,10,10,10,10,10,10),
-  Type = "Large Narrow Body"
+  Aircraft_Type = "Large Narrow Body"
 )
 
 wide_body_data <- data.frame(
@@ -29,37 +30,39 @@ wide_body_data <- data.frame(
   Purchased_Goods = c(1513,1788,1683,1356,1309,1815,1935,1701,1927,2660,3953,4634,4884,7761,3762,5188,6521,7017,6737,6406,4216),
   Aircraft_Ownership = c(1340,1344,1215,1140,1121,1235,1232,1225,1266,1165,1029,815,793,787,837,750,313,369,386,348,312),
   Daily_Utilization = c(11.54,11.38,11.48,11.69,11.94,11.86,11.56,10.53,9.59,11.61,12.07,12.14,12.41,12.45,12.09,12.28,12.10,12.25,11.65,11.68,11.62),
-  Type = "Wide Body"
+  Aircraft_Type = "Wide Body"
 )
 
-# Randomly sample 11 years (using same seed for consistency)
-sampled_years <- sample(1995:2015, 11)
+# Combine all data frames
+all_data <- rbind(small_narrow_data, large_narrow_data, wide_body_data)
 
-# Filter all datasets using the same sampled years
-small_narrow_sample <- small_narrow_data[small_narrow_data$Year %in% sampled_years, ]
-large_narrow_sample <- large_narrow_data[large_narrow_data$Year %in% sampled_years, ]
-wide_body_sample <- wide_body_data[wide_body_data$Year %in% sampled_years, ]
+# Randomly sample 11 years
+sampled_years <- sample(unique(all_data$Year), 11)
 
-# Combine all samples into one data frame
-combined_data <- rbind(
-  small_narrow_sample,
-  large_narrow_sample,
-  wide_body_sample
-)
+# Filter data for sampled years
+sampled_data <- all_data[all_data$Year %in% sampled_years, ]
 
 # Reshape data for ggplot
-data_long <- melt(combined_data, id.vars = c("Year", "Type"))
-
-# Create combined box plot
-ggplot(data_long, aes(x = variable, y = value, fill = Type)) +
-  geom_boxplot(position = position_dodge(width = 0.8)) +
-  scale_x_discrete(labels = c("Purchased\nGoods", "Aircraft\nOwnership", "Daily\nUtilization")) +
-  labs(title = "United Airlines Variables by Aircraft Type (n=11 sample)",
-       subtitle = paste("Sampled years:", paste(sort(sampled_years), collapse = ", ")),
-       x = "Variable",
-       y = "Value") +
+data_long <- melt(sampled_data, id.vars = c("Year", "Aircraft_Type"))
+# Create the box plot
+ggplot(data_long, aes(x = variable, y = value, fill = Aircraft_Type)) +
+  # Add box plots with colors
+  geom_boxplot() +
+  # Set colors
+  scale_fill_manual(values = c(
+    "Large Narrow Body" = "pink",
+    "Small Narrow Body" = "lavender",
+    "Wide Body" = "skyblue"
+  )) +
+  
+  labs(
+    title = "United Airlines Variables by Aircraft Type",
+    x = "Variable",
+    y = "Value",
+    fill = "Type"
+  ) +
+  # clean look
   theme_minimal() +
-  theme(axis.text.x = element_text(angle = 0, hjust = 0.5),
-        plot.subtitle = element_text(size = 8),
-        legend.position = "bottom") +
-  scale_fill_brewer(palette = "Set2")  # Use a colorblind-friendly palette
+  # legend at bottom
+  theme(legend.position = "bottom")
+  )
